TP4/obj/src/parser.output
Rules useless in parser due to conflicts

  114 parametro: especificador_tipo


Estado 79 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 105 conflictos: 1 desplazamiento/reducción, 2 reducción/reducción
Estado 127 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 154 conflictos: 21 desplazamiento(s)/reducción(ones)
Estado 166 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 172 conflictos: 21 desplazamiento(s)/reducción(ones)
Estado 189 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programa $end

    1 programa: /* vacío */
    2         | programa elemento_programa

    3 elemento_programa: definicion_funcion
    4                  | declaracion_externa
    5                  | sentencia_expresion_global
    6                  | error ';'
    7                  | error '}'

    8 sentencia_expresion_global: IDENTIFICADOR ASSIGN IDENTIFICADOR ';'
    9                           | expresion ';'

   10 declaracion_externa: declaracion
   11                    | prototipo_funcion

   12 prototipo_funcion: especificadores_declaracion IDENTIFICADOR '(' lista_parametros_opt ')' ';'
   13                  | VOID IDENTIFICADOR '(' lista_parametros_opt ')' ';'

   14 lista_parametros_opt: /* vacío */
   15                     | VOID
   16                     | lista_parametros

   17 expresion: expresion_asignacion

   18 expresion_asignacion: expresion_logica_or
   19                     | CONSTANTE ASSIGN expresion_asignacion
   20                     | CONSTANTE_REAL ASSIGN expresion_asignacion
   21                     | IDENTIFICADOR ASSIGN expresion_asignacion
   22                     | IDENTIFICADOR ADD_ASSIGN expresion_asignacion
   23                     | IDENTIFICADOR SUB_ASSIGN expresion_asignacion
   24                     | IDENTIFICADOR MUL_ASSIGN expresion_asignacion
   25                     | IDENTIFICADOR DIV_ASSIGN expresion_asignacion

   26 expresion_logica_or: expresion_logica_and
   27                    | expresion_logica_or OR expresion_logica_and

   28 expresion_logica_and: expresion_igualdad
   29                     | expresion_logica_and AND expresion_igualdad

   30 expresion_igualdad: expresion_relacional
   31                   | expresion_igualdad EQ expresion_relacional
   32                   | expresion_igualdad NE expresion_relacional

   33 expresion_relacional: expresion_aditiva
   34                     | expresion_relacional LT expresion_aditiva
   35                     | expresion_relacional GT expresion_aditiva
   36                     | expresion_relacional LE expresion_aditiva
   37                     | expresion_relacional GE expresion_aditiva

   38 expresion_aditiva: expresion_multiplicativa
   39                  | expresion_aditiva PLUS expresion_multiplicativa
   40                  | expresion_aditiva MINUS expresion_multiplicativa

   41 expresion_multiplicativa: expresion_unaria
   42                         | expresion_multiplicativa STAR expresion_unaria
   43                         | expresion_multiplicativa SLASH expresion_unaria

   44 expresion_unaria: expresion_postfija
   45                 | PLUSPLUS IDENTIFICADOR
   46                 | MINUSMINUS IDENTIFICADOR
   47                 | MINUS expresion_unaria

   48 expresion_postfija: expresion_primaria
   49                   | IDENTIFICADOR '(' lista_argumentos_invocacion ')'
   50                   | IDENTIFICADOR PLUSPLUS
   51                   | IDENTIFICADOR MINUSMINUS

   52 expresion_primaria: IDENTIFICADOR
   53                   | CONSTANTE
   54                   | CONSTANTE_REAL
   55                   | STRING_LITERAL
   56                   | '(' expresion ')'

   57 lista_argumentos_invocacion: /* vacío */
   58                            | lista_expresiones

   59 lista_expresiones: expresion
   60                  | lista_expresiones ',' expresion

   61 sentencia: sentencia_etiquetada
   62          | sentencia_expresion
   63          | sentencia_compuesta
   64          | sentencia_seleccion
   65          | sentencia_iteracion
   66          | sentencia_salto

   67 sentencia_etiquetada: CASE expresion ':' sentencia
   68                     | DEFAULT ':' sentencia
   69                     | CASE expresion ':'
   70                     | DEFAULT ':'
   71                     | CASE expresion ':' error
   72                     | DEFAULT ':' error

   73 sentencia_expresion: ';'
   74                    | expresion ';'
   75                    | expresion error

   76 sentencia_compuesta: '{' '}'
   77                    | '{' lista_elementos_bloque '}'
   78                    | '{' lista_elementos_bloque error '}'
   79                    | '{' error '}'

   80 lista_elementos_bloque: elemento_bloque
   81                       | lista_elementos_bloque elemento_bloque
   82                       | lista_elementos_bloque error
   83                       | error

   84 elemento_bloque: declaracion
   85                | sentencia

   86 sentencia_seleccion: IF '(' expresion ')' sentencia
   87                    | IF '(' expresion ')' sentencia ELSE sentencia
   88                    | SWITCH '(' expresion ')' sentencia

   89 sentencia_iteracion: WHILE '(' expresion ')' sentencia
   90                    | DO sentencia WHILE '(' expresion ')' ';'
   91                    | FOR '(' expresion_opt ';' expresion_opt ';' expresion_opt ')' sentencia
   92                    | FOR '(' declaracion expresion_opt ';' expresion_opt ')' sentencia

   93 expresion_opt: /* vacío */
   94              | expresion

   95 sentencia_salto: CONTINUE ';'
   96                | BREAK ';'
   97                | RETURN ';'
   98                | RETURN expresion ';'

   99 declaracion: especificadores_declaracion ';'
  100            | especificadores_declaracion lista_declaradores ';'

  101 especificadores_declaracion: especificador_tipo
  102                            | especificadores_declaracion especificador_tipo

  103 especificador_tipo: ESPECIFICADOR_TIPO

  104 lista_declaradores: declarador
  105                   | lista_declaradores ',' declarador

  106 declarador: IDENTIFICADOR
  107           | IDENTIFICADOR ASSIGN expresion

  108 definicion_funcion: especificadores_declaracion IDENTIFICADOR '(' lista_parametros_opt ')' sentencia_compuesta
  109                   | VOID IDENTIFICADOR '(' lista_parametros_opt ')' sentencia_compuesta

  110 lista_parametros: parametro
  111                 | lista_parametros ',' parametro

  112 parametro: especificador_tipo IDENTIFICADOR
  113          | especificadores_declaracion IDENTIFICADOR
  114          | especificador_tipo
  115          | especificadores_declaracion


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 12 13 49 56 86 87 88 89 90 91 92 108 109
')' (41) 12 13 49 56 86 87 88 89 90 91 92 108 109
',' (44) 60 105 111
':' (58) 67 68 69 70 71 72
';' (59) 6 8 9 12 13 73 74 90 91 92 95 96 97 98 99 100
'{' (123) 76 77 78 79
'}' (125) 7 76 77 78 79
error (256) 6 7 71 72 75 78 79 82 83
DIV_ASSIGN (258) 25
MUL_ASSIGN (259) 24
SUB_ASSIGN (260) 23
ADD_ASSIGN (261) 22
ASSIGN (262) 8 19 20 21 107
OR (263) 27
AND (264) 29
NE (265) 32
EQ (266) 31
GE (267) 37
LE (268) 36
GT (269) 35
LT (270) 34
MINUS (271) 40 47
PLUS (272) 39
SLASH (273) 43
STAR (274) 42
MINUSMINUS (275) 46 51
PLUSPLUS (276) 45 50
ESPECIFICADOR_TIPO (277) 103
IF (278) 86 87
ELSE (279) 87
DEFAULT (280) 68 70 72
CASE (281) 67 69 71
STRING_LITERAL (282) 55
SWITCH (283) 88
BREAK (284) 96
FOR (285) 91 92
DO (286) 90
WHILE (287) 89 90
CONTINUE (288) 95
RETURN (289) 97 98
VOID (290) 13 15 109
IDENTIFICADOR (291) 8 12 13 21 22 23 24 25 45 46 49 50 51 52 106 107
    108 109 112 113
CONSTANTE (292) 19 53
CONSTANTE_REAL (293) 20 54


No terminales con las reglas donde aparecen

$accept (46)
    en la izquierda: 0
programa (47)
    en la izquierda: 1 2, en la derecha: 0 2
elemento_programa (48)
    en la izquierda: 3 4 5 6 7, en la derecha: 2
sentencia_expresion_global (49)
    en la izquierda: 8 9, en la derecha: 5
declaracion_externa (50)
    en la izquierda: 10 11, en la derecha: 4
prototipo_funcion (51)
    en la izquierda: 12 13, en la derecha: 11
lista_parametros_opt (52)
    en la izquierda: 14 15 16, en la derecha: 12 13 108 109
expresion (53)
    en la izquierda: 17, en la derecha: 9 56 59 60 67 69 71 74 75 86
    87 88 89 90 94 98 107
expresion_asignacion (54)
    en la izquierda: 18 19 20 21 22 23 24 25, en la derecha: 17 19
    20 21 22 23 24 25
expresion_logica_or (55)
    en la izquierda: 26 27, en la derecha: 18 27
expresion_logica_and (56)
    en la izquierda: 28 29, en la derecha: 26 27 29
expresion_igualdad (57)
    en la izquierda: 30 31 32, en la derecha: 28 29 31 32
expresion_relacional (58)
    en la izquierda: 33 34 35 36 37, en la derecha: 30 31 32 34 35
    36 37
expresion_aditiva (59)
    en la izquierda: 38 39 40, en la derecha: 33 34 35 36 37 39 40
expresion_multiplicativa (60)
    en la izquierda: 41 42 43, en la derecha: 38 39 40 42 43
expresion_unaria (61)
    en la izquierda: 44 45 46 47, en la derecha: 41 42 43 47
expresion_postfija (62)
    en la izquierda: 48 49 50 51, en la derecha: 44
expresion_primaria (63)
    en la izquierda: 52 53 54 55 56, en la derecha: 48
lista_argumentos_invocacion (64)
    en la izquierda: 57 58, en la derecha: 49
lista_expresiones (65)
    en la izquierda: 59 60, en la derecha: 58 60
sentencia (66)
    en la izquierda: 61 62 63 64 65 66, en la derecha: 67 68 85 86
    87 88 89 90 91 92
sentencia_etiquetada (67)
    en la izquierda: 67 68 69 70 71 72, en la derecha: 61
sentencia_expresion (68)
    en la izquierda: 73 74 75, en la derecha: 62
sentencia_compuesta (69)
    en la izquierda: 76 77 78 79, en la derecha: 63 108 109
lista_elementos_bloque (70)
    en la izquierda: 80 81 82 83, en la derecha: 77 78 81 82
elemento_bloque (71)
    en la izquierda: 84 85, en la derecha: 80 81
sentencia_seleccion (72)
    en la izquierda: 86 87 88, en la derecha: 64
sentencia_iteracion (73)
    en la izquierda: 89 90 91 92, en la derecha: 65
expresion_opt (74)
    en la izquierda: 93 94, en la derecha: 91 92
sentencia_salto (75)
    en la izquierda: 95 96 97 98, en la derecha: 66
declaracion (76)
    en la izquierda: 99 100, en la derecha: 10 84 92
especificadores_declaracion (77)
    en la izquierda: 101 102, en la derecha: 12 99 100 102 108 113
    115
especificador_tipo (78)
    en la izquierda: 103, en la derecha: 101 102 112 114
lista_declaradores (79)
    en la izquierda: 104 105, en la derecha: 100 105
declarador (80)
    en la izquierda: 106 107, en la derecha: 104 105
definicion_funcion (81)
    en la izquierda: 108 109, en la derecha: 3
lista_parametros (82)
    en la izquierda: 110 111, en la derecha: 16 111
parametro (83)
    en la izquierda: 112 113 114 115, en la derecha: 110 111


estado 0

    0 $accept: . programa $end
    1 programa: .
    2         | . programa elemento_programa

    $default  reduce usando la regla 1 (programa)

    programa  ir al estado 1


estado 1

    0 $accept: programa . $end
    2 programa: programa . elemento_programa
    3 elemento_programa: . definicion_funcion
    4                  | . declaracion_externa
    5                  | . sentencia_expresion_global
    6                  | . error ';'
    7                  | . error '}'
    8 sentencia_expresion_global: . IDENTIFICADOR ASSIGN IDENTIFICADOR ';'
    9                           | . expresion ';'
   10 declaracion_externa: . declaracion
   11                    | . prototipo_funcion
   12 prototipo_funcion: . especificadores_declaracion IDENTIFICADOR '(' lista_parametros_opt ')' ';'
   13                  | . VOID IDENTIFICADOR '(' lista_parametros_opt ')' ';'
   17 expresion: . expresion_asignacion
   18 expresion_asignacion: . expresion_logica_or
   19                     | . CONSTANTE ASSIGN expresion_asignacion
   20                     | . CONSTANTE_REAL ASSIGN expresion_asignacion
   21                     | . IDENTIFICADOR ASSIGN expresion_asignacion
   22                     | . IDENTIFICADOR ADD_ASSIGN expresion_asignacion
   23                     | . IDENTIFICADOR SUB_ASSIGN expresion_asignacion
   24                     | . IDENTIFICADOR MUL_ASSIGN expresion_asignacion
   25                     | . IDENTIFICADOR DIV_ASSIGN expresion_asignacion
   26 expresion_logica_or: . expresion_logica_and
   27                    | . expresion_logica_or OR expresion_logica_and
   28 expresion_logica_and: . expresion_igualdad
   29                     | . expresion_logica_and AND expresion_igualdad
   30 expresion_igualdad: . expresion_relacional
   31                   | . expresion_igualdad EQ expresion_relacional
   32                   | . expresion_igualdad NE expresion_relacional
   33 expresion_relacional: . expresion_aditiva
   34                     | . expresion_relacional LT expresion_aditiva
   35                     | . expresion_relacional GT expresion_aditiva
   36                     | . expresion_relacional LE expresion_aditiva
   37                     | . expresion_relacional GE expresion_aditiva
   38 expresion_aditiva: . expresion_multiplicativa
   39                  | . expresion_aditiva PLUS expresion_multiplicativa
   40                  | . expresion_aditiva MINUS expresion_multiplicativa
   41 expresion_multiplicativa: . expresion_unaria
   42                         | . expresion_multiplicativa STAR expresion_unaria
   43                         | . expresion_multiplicativa SLASH expresion_unaria
   44 expresion_unaria: . expresion_postfija
   45                 | . PLUSPLUS IDENTIFICADOR
   46                 | . MINUSMINUS IDENTIFICADOR
   47                 | . MINUS expresion_unaria
   48 expresion_postfija: . expresion_primaria
   49                   | . IDENTIFICADOR '(' lista_argumentos_invocacion ')'
   50                   | . IDENTIFICADOR PLUSPLUS
   51                   | . IDENTIFICADOR MINUSMINUS
   52 expresion_primaria: . IDENTIFICADOR
   53                   | . CONSTANTE
   54                   | . CONSTANTE_REAL
   55                   | . STRING_LITERAL
   56                   | . '(' expresion ')'
   99 declaracion: . especificadores_declaracion ';'
  100            | . especificadores_declaracion lista_declaradores ';'
  101 especificadores_declaracion: . especificador_tipo
  102                            | . especificadores_declaracion especificador_tipo
  103 especificador_tipo: . ESPECIFICADOR_TIPO
  108 definicion_funcion: . especificadores_declaracion IDENTIFICADOR '(' lista_parametros_opt ')' sentencia_compuesta
  109                   | . VOID IDENTIFICADOR '(' lista_parametros_opt ')' sentencia_compuesta

    $end                desplazar e ir al estado 2
    error               desplazar e ir al estado 3
    MINUS               desplazar e ir al estado 4
    MINUSMINUS          desplazar e ir al estado 5
    PLUSPLUS            desplazar e ir al estado 6
    '('                 desplazar e ir al estado 7
    ESPECIFICADOR_TIPO  desplazar e ir al estado 8
    STRING_LITERAL      desplazar e ir al estado 9
    VOID                desplazar e ir al estado 10
    IDENTIFICADOR       desplazar e ir al estado 11
    CONSTANTE           desplazar e ir al estado 12
    CONSTANTE_REAL      desplazar e ir al estado 13

    elemento_programa            ir al estado 14
    sentencia_expresion_global   ir al estado 15
    declaracion_externa          ir al estado 16
    prototipo_funcion            ir al estado 17
    expresion                    ir al estado 18
    expresion_asignacion         ir al estado 19
    expresion_logica_or          ir al estado 20
    expresion_logica_and         ir al estado 21
    expresion_igualdad           ir al estado 22
    expresion_relacional         ir al estado 23
    expresion_aditiva            ir al estado 24
    expresion_multiplicativa     ir al estado 25
    expresion_unaria             ir al estado 26
    expresion_postfija           ir al estado 27
    expresion_primaria           ir al estado 28
    declaracion                  ir al estado 29
    especificadores_declaracion  ir al estado 30
    especificador_tipo           ir al estado 31
    definicion_funcion           ir al estado 32


estado 2

    0 $accept: programa $end .

    $default  aceptar


estado 3

    6 elemento_programa: error . ';'
    7                  | error . '}'

    ';'  desplazar e ir al estado 33
    '}'  desplazar e ir al estado 34


estado 4

   44 expresion_unaria: . expresion_postfija
   45                 | . PLUSPLUS IDENTIFICADOR
   46                 | . MINUSMINUS IDENTIFICADOR
   47                 | . MINUS expresion_unaria
   47                 | MINUS . expresion_unaria
   48 expresion_postfija: . expresion_primaria
   49                   | . IDENTIFICADOR '(' lista_argumentos_invocacion ')'
   50                   | . IDENTIFICADOR PLUSPLUS
   51                   | . IDENTIFICADOR MINUSMINUS
   52 expresion_primaria: . IDENTIFICADOR
   53                   | . CONSTANTE
   54                   | . CONSTANTE_REAL
   55                   | . STRING_LITERAL
   56                   | . '(' expresion ')'

    MINUS           desplazar e ir al estado 4
    MINUSMINUS      desplazar e ir al estado 5
    PLUSPLUS        desplazar e ir al estado 6
    '('             desplazar e ir al estado 7
    STRING_LITERAL  desplazar e ir al estado 9
    IDENTIFICADOR   desplazar e ir al estado 35
    CONSTANTE       desplazar e ir al estado 36
    CONSTANTE_REAL  desplazar e ir al estado 37

    expresion_unaria    ir al estado 38
    expresion_postfija  ir al estado 27
    expresion_primaria  ir al estado 28


estado 5

   46 expresion_unaria: MINUSMINUS . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 39


estado 6

   45 expresion_unaria: PLUSPLUS . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 40


estado 7

   17 expresion: . expresion_asignacion
   18 expresion_asignacion: . expresion_logica_or
   19                     | . CONSTANTE ASSIGN expresion_asignacion
   20                     | . CONSTANTE_REAL ASSIGN expresion_asignacion
   21                     | . IDENTIFICADOR ASSIGN expresion_asignacion
   22                     | . IDENTIFICADOR ADD_ASSIGN expresion_asignacion
   23                     | . IDENTIFICADOR SUB_ASSIGN expresion_asignacion
   24                     | . IDENTIFICADOR MUL_ASSIGN expresion_asignacion
   25                     | . IDENTIFICADOR DIV_ASSIGN expresion_asignacion
   26 expresion_logica_or: . expresion_logica_and
   27                    | . expresion_logica_or OR expresion_logica_and
   28 expresion_logica_and: . expresion_igualdad
   29                     | . expresion_logica_and AND expresion_igualdad
   30 expresion_igualdad: . expresion_relacional
   31                   | . expresion_igualdad EQ expresion_relacional
   32                   | . expresion_igualdad NE expresion_relacional
   33 expresion_relacional: . expresion_aditiva
   34                     | . expresion_relacional LT expresion_aditiva
   35                     | . expresion_relacional GT expresion_aditiva
   36                     | . expresion_relacional LE expresion_aditiva
   37                     | . expresion_relacional GE expresion_aditiva
   38 expresion_aditiva: . expresion_multiplicativa
   39                  | . expresion_aditiva PLUS expresion_multiplicativa
   40                  | . expresion_aditiva MINUS expresion_multiplicativa
   41 expresion_multiplicativa: . expresion_unaria
   42                         | . expresion_multiplicativa STAR expresion_unaria
   43                         | . expresion_multiplicativa SLASH expresion_unaria
   44 expresion_unaria: . expresion_postfija
   45                 | . PLUSPLUS IDENTIFICADOR
   46                 | . MINUSMINUS IDENTIFICADOR
   47                 | . MINUS expresion_unaria
   48 expresion_postfija: . expresion_primaria
   49                   | . IDENTIFICADOR '(' lista_argumentos_invocacion ')'
   50                   | . IDENTIFICADOR PLUSPLUS
   51                   | . IDENTIFICADOR MINUSMINUS
   52 expresion_primaria: . IDENTIFICADOR
   53                   | . CONSTANTE
   54                   | . CONSTANTE_REAL
   55                   | . STRING_LITERAL
   56                   | . '(' expresion ')'
   56                   | '(' . expresion ')'

    MINUS           desplazar e ir al estado 4
    MINUSMINUS      desplazar e ir al estado 5
    PLUSPLUS        desplazar e ir al estado 6
    '('             desplazar e ir al estado 7
    STRING_LITERAL  desplazar e ir al estado 9
    IDENTIFICADOR   desplazar e ir al estado 41
    CONSTANTE       desplazar e ir al estado 12
    CONSTANTE_REAL  desplazar e ir al estado 13

    expresion                 ir al estado 42
    expresion_asignacion      ir al estado 19
    expresion_logica_or       ir al estado 20
    expresion_logica_and      ir al estado 21
    expresion_igualdad        ir al estado 22
    expresion_relacional      ir al estado 23
    expresion_aditiva         ir al estado 24
    expresion_multiplicativa  ir al estado 25
    expresion_unaria          ir al estado 26
    expresion_postfija        ir al estado 27
    expresion_primaria        ir al estado 28


estado 8

  103 especificador_tipo: ESPECIFICADOR_TIPO .

    $default  reduce usando la regla 103 (especificador_tipo)


estado 9

   55 expresion_primaria: STRING_LITERAL .

    $default  reduce usando la regla 55 (expresion_primaria)


estado 10

   13 prototipo_funcion: VOID . IDENTIFICADOR '(' lista_parametros_opt ')' ';'
  109 definicion_funcion: VOID . IDENTIFICADOR '(' lista_parametros_opt ')' sentencia_compuesta

    IDENTIFICADOR  desplazar e ir al estado 43


estado 11

    8 sentencia_expresion_global: IDENTIFICADOR . ASSIGN IDENTIFICADOR ';'
   21 expresion_asignacion: IDENTIFICADOR . ASSIGN expresion_asignacion
   22                     | IDENTIFICADOR . ADD_ASSIGN expresion_asignacion
   23                     | IDENTIFICADOR . SUB_ASSIGN expresion_asignacion
   24                     | IDENTIFICADOR . MUL_ASSIGN expresion_asignacion
   25                     | IDENTIFICADOR . DIV_ASSIGN expresion_asignacion
   49 expresion_postfija: IDENTIFICADOR . '(' lista_argumentos_invocacion ')'
   50                   | IDENTIFICADOR . PLUSPLUS
   51                   | IDENTIFICADOR . MINUSMINUS
   52 expresion_primaria: IDENTIFICADOR .  [OR, AND, NE, EQ, GE, LE, GT, LT, MINUS, PLUS, SLASH, STAR, ';']

    DIV_ASSIGN  desplazar e ir al estado 44
    MUL_ASSIGN  desplazar e ir al estado 45
    SUB_ASSIGN  desplazar e ir al estado 46
    ADD_ASSIGN  desplazar e ir al estado 47
    ASSIGN      desplazar e ir al estado 48
    MINUSMINUS  desplazar e ir al estado 49
    PLUSPLUS    desplazar e ir al estado 50
    '('         desplazar e ir al estado 51

    $default  reduce usando la regla 52 (expresion_primaria)


estado 12

   19 expresion_asignacion: CONSTANTE . ASSIGN expresion_asignacion
   53 expresion_primaria: CONSTANTE .  [error, OR, AND, NE, EQ, GE, LE, GT, LT, MINUS, PLUS, SLASH, STAR, ')', ';', ',', ':']

    ASSIGN  desplazar e ir al estado 52

    $default  reduce usando la regla 53 (expresion_primaria)


estado 13

   20 expresion_asignacion: CONSTANTE_REAL . ASSIGN expresion_asignacion
   54 expresion_primaria: CONSTANTE_REAL .  [error, OR, AND, NE, EQ, GE, LE, GT, LT, MINUS, PLUS, SLASH, STAR, ')', ';', ',', ':']

    ASSIGN  desplazar e ir al estado 53

    $default  reduce usando la regla 54 (expresion_primaria)


estado 14

    2 programa: programa elemento_programa .

    $default  reduce usando la regla 2 (programa)


estado 15

    5 elemento_programa: sentencia_expresion_global .

    $default  reduce usando la regla 5 (elemento_programa)


estado 16

    4 elemento_programa: declaracion_externa .

    $default  reduce usando la regla 4 (elemento_programa)


estado 17

   11 declaracion_externa: prototipo_funcion .

    $default  reduce usando la regla 11 (declaracion_externa)


estado 18

    9 sentencia_expresion_global: expresion . ';'

    ';'  desplazar e ir al estado 54


estado 19

   17 expresion: expresion_asignacion .

    $default  reduce usando la regla 17 (expresion)


estado 20

   18 expresion_asignacion: expresion_logica_or .  [error, ')', ';', ',', ':']
   27 expresion_logica_or: expresion_logica_or . OR expresion_logica_and

    OR  desplazar e ir al estado 55

    $default  reduce usando la regla 18 (expresion_asignacion)


estado 21

   26 expresion_logica_or: expresion_logica_and .  [error, OR, ')', ';', ',', ':']
   29 expresion_logica_and: expresion_logica_and . AND expresion_igualdad

    AND  desplazar e ir al estado 56

    $default  reduce usando la regla 26 (expresion_logica_or)


estado 22

   28 expresion_logica_and: expresion_igualdad .  [error, OR, AND, ')', ';', ',', ':']
   31 expresion_igualdad: expresion_igualdad . EQ expresion_relacional
   32                   | expresion_igualdad . NE expresion_relacional

    NE  desplazar e ir al estado 57
    EQ  desplazar e ir al estado 58

    $default  reduce usando la regla 28 (expresion_logica_and)


estado 23

   30 expresion_igualdad: expresion_relacional .  [error, OR, AND, NE, EQ, ')', ';', ',', ':']
   34 expresion_relacional: expresion_relacional . LT expresion_aditiva
   35                     | expresion_relacional . GT expresion_aditiva
   36                     | expresion_relacional . LE expresion_aditiva
   37                     | expresion_relacional . GE expresion_aditiva

    GE  desplazar e ir al estado 59
    LE  desplazar e ir al estado 60
    GT  desplazar e ir al estado 61
    LT  desplazar e ir al estado 62

    $default  reduce usando la regla 30 (expresion_igualdad)


estado 24

   33 expresion_relacional: expresion_aditiva .  [error, OR, AND, NE, EQ, GE, LE, GT, LT, ')', ';', ',', ':']
   39 expresion_aditiva: expresion_aditiva . PLUS expresion_multiplicativa
   40                  | expresion_aditiva . MINUS expresion_multiplicativa

    MINUS  desplazar e ir al estado 63
    PLUS   desplazar e ir al estado 64

    $default  reduce usando la regla 33 (expresion_relacional)


estado 25

   38 expresion_aditiva: expresion_multiplicativa .  [error, OR, AND, NE, EQ, GE, LE, GT, LT, MINUS, PLUS, ')', ';', ',', ':']
   42 expresion_multiplicativa: expresion_multiplicativa . STAR expresion_unaria
   43                         | expresion_multiplicativa . SLASH expresion_unaria

    SLASH  desplazar e ir al estado 65
    STAR   desplazar e ir al estado 66

    $default  reduce usando la regla 38 (expresion_aditiva)


estado 26

   41 expresion_multiplicativa: expresion_unaria .

    $default  reduce usando la regla 41 (expresion_multiplicativa)


estado 27

   44 expresion_unaria: expresion_postfija .

    $default  reduce usando la regla 44 (expresion_unaria)


estado 28

   48 expresion_postfija: expresion_primaria .

    $default  reduce usando la regla 48 (expresion_postfija)


estado 29

   10 declaracion_externa: declaracion .

    $default  reduce usando la regla 10 (declaracion_externa)


estado 30

   12 prototipo_funcion: especificadores_declaracion . IDENTIFICADOR '(' lista_parametros_opt ')' ';'
   99 declaracion: especificadores_declaracion . ';'
  100            | especificadores_declaracion . lista_declaradores ';'
  102 especificadores_declaracion: especificadores_declaracion . especificador_tipo
  103 especificador_tipo: . ESPECIFICADOR_TIPO
  104 lista_declaradores: . declarador
  105                   | . lista_declaradores ',' declarador
  106 declarador: . IDENTIFICADOR
  107           | . IDENTIFICADOR ASSIGN expresion
  108 definicion_funcion: especificadores_declaracion . IDENTIFICADOR '(' lista_parametros_opt ')' sentencia_compuesta

    ESPECIFICADOR_TIPO  desplazar e ir al estado 8
    IDENTIFICADOR       desplazar e ir al estado 67
    ';'                 desplazar e ir al estado 68

    especificador_tipo  ir al estado 69
    lista_declaradores  ir al estado 70
    declarador          ir al estado 71


estado 31

  101 especificadores_declaracion: especificador_tipo .

    $default  reduce usando la regla 101 (especificadores_declaracion)


estado 32

    3 elemento_programa: definicion_funcion .

    $default  reduce usando la regla 3 (elemento_programa)


estado 33

    6 elemento_programa: error ';' .

    $default  reduce usando la regla 6 (elemento_programa)


estado 34

    7 elemento_programa: error '}' .

    $default  reduce usando la regla 7 (elemento_programa)


estado 35

   49 expresion_postfija: IDENTIFICADOR . '(' lista_argumentos_invocacion ')'
   50                   | IDENTIFICADOR . PLUSPLUS
   51                   | IDENTIFICADOR . MINUSMINUS
   52 expresion_primaria: IDENTIFICADOR .  [error, OR, AND, NE, EQ, GE, LE, GT, LT, MINUS, PLUS, SLASH, STAR, ')', ';', ',', ':']

    MINUSMINUS  desplazar e ir al estado 49
    PLUSPLUS    desplazar e ir al estado 50
    '('         desplazar e ir al estado 51

    $default  reduce usando la regla 52 (expresion_primaria)


estado 36

   53 expresion_primaria: CONSTANTE .

    $default  reduce usando la regla 53 (expresion_primaria)


estado 37

   54 expresion_primaria: CONSTANTE_REAL .

    $default  reduce usando la regla 54 (expresion_primaria)


estado 38

   47 expresion_unaria: MINUS expresion_unaria .

    $default  reduce usando la regla 47 (expresion_unaria)


estado 39

   46 expresion_unaria: MINUSMINUS IDENTIFICADOR .

    $default  reduce usando la regla 46 (expresion_unaria)


estado 40

   45 expresion_unaria: PLUSPLUS IDENTIFICADOR .

    $default  reduce usando la regla 45 (expresion_unaria)


estado 41

   21 expresion_asignacion: IDENTIFICADOR . ASSIGN expresion_asignacion
   22                     | IDENTIFICADOR . ADD_ASSIGN expresion_asignacion
   23                     | IDENTIFICADOR . SUB_ASSIGN expresion_asignacion
   24                     | IDENTIFICADOR . MUL_ASSIGN expresion_asignacion
   25                     | IDENTIFICADOR . DIV_ASSIGN expresion_asignacion
   49 expresion_postfija: IDENTIFICADOR . '(' lista_argumentos_invocacion ')'
   50                   | IDENTIFICADOR . PLUSPLUS
   51                   | IDENTIFICADOR . MINUSMINUS
   52 expresion_primaria: IDENTIFICADOR .  [error, OR, AND, NE, EQ, GE, LE, GT, LT, MINUS, PLUS, SLASH, STAR, ')', ';', ',', ':']

    DIV_ASSIGN  desplazar e ir al estado 44
    MUL_ASSIGN  desplazar e ir al estado 45
    SUB_ASSIGN  desplazar e ir al estado 46
    ADD_ASSIGN  desplazar e ir al estado 47
    ASSIGN      desplazar e ir al estado 72
    MINUSMINUS  desplazar e ir al estado 49
    PLUSPLUS    desplazar e ir al estado 50
    '('         desplazar e ir al estado 51

    $default  reduce usando la regla 52 (expresion_primaria)


estado 42

   56 expresion_primaria: '(' expresion . ')'

    ')'  desplazar e ir al estado 73


estado 43

   13 prototipo_funcion: VOID IDENTIFICADOR . '(' lista_parametros_opt ')' ';'
  109 definicion_funcion: VOID IDENTIFICADOR . '(' lista_parametros_opt ')' sentencia_compuesta

    '('  desplazar e ir al estado 74


estado 44

   18 expresion_asignacion: . expresion_logica_or
   19                     | . CONSTANTE ASSIGN expresion_asignacion
   20                     | . CONSTANTE_REAL ASSIGN expresion_asignacion
   21                     | . IDENTIFICADOR ASSIGN expresion_asignacion
   22                     | . IDENTIFICADOR ADD_ASSIGN expresion_asignacion
   23                     | . IDENTIFICADOR SUB_ASSIGN expresion_asignacion
   24                     | . IDENTIFICADOR MUL_ASSIGN expresion_asignacion
   25                     | . IDENTIFICADOR DIV_ASSIGN expresion_asignacion
   25                     | IDENTIFICADOR DIV_ASSIGN . expresion_asignacion
   26 expresion_logica_or: . expresion_logica_and
   27                    | . expresion_logica_or OR expresion_logica_and
   28 expresion_logica_and: . expresion_igualdad
   29                     | . expresion_logica_and AND expresion_igualdad
   30 expresion_igualdad: . expresion_relacional
   31                   | . expresion_igualdad EQ expresion_relacional
   32                   | . expresion_igualdad NE expresion_relacional
   33 expresion_relacional: . expresion_aditiva
   34                     | . expresion_relacional LT expresion_aditiva
   35                     | . expresion_relacional GT expresion_aditiva
   36                     | . expresion_relacional LE expresion_aditiva
   37                     | . expresion_relacional GE expresion_aditiva
   38 expresion_aditiva: . expresion_multiplicativa
   39                  | . expresion_aditiva PLUS expresion_multiplicativa
   40                  | . expresion_aditiva MINUS expresion_multiplicativa
   41 expresion_multiplicativa: . expresion_unaria
   42                         | . expresion_multiplicativa STAR expresion_unaria
   43                         | . expresion_multiplicativa SLASH expresion_unaria
   44 expresion_unaria: . expresion_postfija
   45                 | . PLUSPLUS IDENTIFICADOR
   46                 | . MINUSMINUS IDENTIFICADOR
   47                 | . MINUS expresion_unaria
   48 expresion_postfija: . expresion_primaria
   49                   | . IDENTIFICADOR '(' lista_argumentos_invocacion ')'
   50                   | . IDENTIFICADOR PLUSPLUS
   51                   | . IDENTIFICADOR MINUSMINUS
   52 expresion_primaria: . IDENTIFICADOR
   53                   | . CONSTANTE
   54                   | . CONSTANTE_REAL
   55                   | . STRING_LITERAL
   56                   | . '(' expresion ')'

    MINUS           desplazar e ir al estado 4
    MINUSMINUS      desplazar e ir al estado 5
    PLUSPLUS        desplazar e ir al estado 6
    '('             desplazar e ir al estado 7
